src/objects/Interaction_Mapping__c.object
<CustomObject>
    <description>Used to map fields from source Object to target Object in the Interactions process.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A checkbox to activate an Interaction Mapping record.</description>
        <inlineHelpText>If checked, the Interaction Mapping is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insert_Null__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for checkboxes to prevent unmapped checkboxes from being written over to false.</description>
        <inlineHelpText>Used for checkboxes to prevent unmapped checkboxes from being written over to false.</inlineHelpText>
        <label>Insert Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction_Source_Field_API_Name__c</fullName>
        <description>The source field on the Interaction object you would like to map to a Target Object field. The value in this field must be in API format and matches an existing field on Interaction.</description>
        <inlineHelpText>The source field on the Interaction object you would like to map. Ensure this is in API format and matches the existing field on Interaction.</inlineHelpText>
        <label>Interaction Source Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Mapping__c</fullName>
        <description>Select the Interaction Sources that should ignore this mapping configuration. The values in this picklist should match the values in Interaction&apos;s &quot;Interaction Sources&quot; field.</description>
        <inlineHelpText>Select the Interaction Sources that should ignore this import configuration.</inlineHelpText>
        <label>Skip Mapping</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
                <value>
                    <fullName>Purchase List</fullName>
                </value>
                <value>
                    <fullName>Student Information System</fullName>
                </value>
                <value>
                    <fullName>Webform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Field_API_Name__c</fullName>
        <description>The field on the Target Object you would like to map an Interaction field value to. The value in this field must be in API format and match an existing field on the Target Object.</description>
        <inlineHelpText>The field on the Target Object you would like to map to. Ensure this is in API format and matches the existing field on the Target Object.</inlineHelpText>
        <label>Target Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_API_Name__c</fullName>
        <description>The API name of the Target Object to map Interaction data to. When adding new values, ensure that you use the API name of the object.</description>
        <inlineHelpText>Select the Target Object to map Interaction data to.</inlineHelpText>
        <label>Target Object API Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CampaignMember</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>hed__Affiliation__c</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interaction Mapping</label>
    <listViews>
        <fullName>Affiliation</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Interaction_Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>hed__Affiliation__c</value>
        </filters>
        <label>Affiliation</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Interaction_Source_Field_API_Name__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CampaignMember</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Interaction_Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>CampaignMember</value>
        </filters>
        <label>Campaign Member</label>
    </listViews>
    <listViews>
        <fullName>Contact</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Interaction_Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact</label>
    </listViews>
    <listViews>
        <fullName>Lead</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Interaction_Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Lead</label>
    </listViews>
    <listViews>
        <fullName>Opportunity</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Target_Object_API_Name__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Interaction_Source_Field_API_Name__c</columns>
        <columns>Insert_Null__c</columns>
        <columns>Skip_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Opportunity</label>
    </listViews>
    <nameField>
        <displayFormat>INTMap-{000000}</displayFormat>
        <label>Interaction Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>